--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 	"bugs": {
 		"url": "https://github.com/JRJurman/shiki-component/issues"
 	},
-	"homepage": "https://github.com/JRJurman/shiki-component#readme"
+	"homepage": "https://github.com/JRJurman/shiki-component#readme",
+	"devDependencies": {
+		"serve": "^14.2.3"
+	}
 }
